--- a/Styles.css
+++ b/Styles.css
@@ -1,3 +1,8 @@
+* {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -59,7 +64,6 @@ button {
 #start {
   background-image: url(../Images/Festivalis/Rectangle\ 2.jpg);
   background-repeat: no-repeat;
-  width: 100vw;
   height: 80vh;
   display: flex;
   justify-content: center;
@@ -145,18 +149,21 @@ button {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
-  padding: 40px;
 }
 
 .performer-card {
-  margin: 70px;
-  width: 15%;
+  margin: 60px;
+  width: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.performer-card img {
+  width: 100%;
 }
 
 .performer-card h3 {
@@ -181,7 +188,7 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 40px;
+  padding-right: 40px;
 }
 
 #galery h3 {
@@ -209,7 +216,7 @@ button {
   justify-content: center;
 }
 
-#galery li {
+#galery img {
   margin: 10px;
 }
 
@@ -235,7 +242,7 @@ button {
   font-weight: 400;
   line-height: 27.24px;
   text-align: center;
-  width: 35vw;
+  width: 45vw;
 }
 
 .tickets-container {
@@ -311,7 +318,6 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 80vw;
   margin: 0 auto;
   padding: 40px;
 }
@@ -357,7 +363,7 @@ button {
 }
 
 iframe {
-  width: 1200px;
+  width: 100%;
   height: 450px;
   border: none;
 }
@@ -370,4 +376,22 @@ footer {
   margin: 0 auto;
   padding: 10px;
   background: #ffffff;
+}
+
+@media (max-width: 600px) {
+  img,
+  .start-header,
+  #galery li,
+  .tickets-card,
+  #contact div {
+    width: 100%;
+  }
+
+  .tickets-container {
+    flex-direction: column;
+  }
+  .tickets-card {
+    margin: 20px 0;
+    padding: 10px;
+  }
 }
